--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,9 @@
     }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "/" }
+    { "src": "/socket.io/(.*)", "dest": "server.js" },
+    { "src": "/(.*)", "dest": "server.js" }
   ]
 }
+
+
