--- a/vercel.json
+++ b/vercel.json
@@ -12,8 +12,8 @@
     }
   ],
   "routes": [
-    { "src": "/socket.io/(.*)", "dest": "server.js" },
-    { "src": "/(.*)", "dest": "server.js" }
+    { "src": "/(.*)", "dest": "/" },
+    { "src": "/socket.io/(.*)", "dest": "server.js" }
   ]
 }
 
