--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,14 @@
+
 {
   "version": 2,
   "builds": [
     {
-      "src": "index.js",
+      "src": "server.js",
       "use": "@vercel/node"
-    },
-    {
-      "src": "src/**/*",
-      "use": "@vercel/static"
     }
   ],
-  "routes": [
-    { "src": "/(.*)", "dest": "/" },
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/server.js" },
     { "src": "/socket.io/(.*)", "dest": "server.js" }
   ],
   "headers": [
