--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
   ],
   "rewrites": [
     { "source": "/(.*)", "destination": "/server.js" },
-    { "source": "/socket.io/(.*)", "dest": "server.js" }
+    { "source": "/socket.io/(.*)", "destination": "server.js" }
   ],
   "headers": [
     {
