--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,15 @@
-
 {
+  "installCommand": "npm install --legacy-peer-deps",
   "version": 2,
   "builds": [
     {
-      "src": "server.js",
+      "src": "index.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "src/**/*",
+      "use": "@vercel/static"
     }
-  ],
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/server.js" },
-    { "source": "/socket.io/(.*)", "destination": "server.js" }
   ],
   "routes": [
     { "src": "/(.*)", "dest": "/" },
@@ -27,3 +27,5 @@
     }
   ]
 }
+
+
